// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModelMatrix /> should render properly 1`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #252525;
  overflow: hidden;
}

.emotion-3 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 0%;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  border-right: 1px solid #191919;
}

.emotion-6 {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-7 {
  font-weight: 700;
  font-size: 17px;
  line-height: 20px;
}

.emotion-8 {
  color: #b3b3b3;
}

.emotion-9 {
  width: 100%;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 800px;
  height: 600px;
  overflow: hidden;
}

.emotion-11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 0;
}

.emotion-12 {
  width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-weight: 700;
  border-right: 1px solid #191919;
  border-bottom: 1px solid #191919;
}

.emotion-13 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-14 {
  color: #b3b3b3;
  padding-left: 4px;
  font-weight: 400;
}

.emotion-15 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.emotion-16 {
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
}

.emotion-17 {
  padding-bottom: 4px;
}

.emotion-18 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #4a4a4a;
}

.emotion-23 {
  display: inline;
}

.emotion-24 {
  width: 0;
  height: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(255,255,255);
  border: 4px solid transparent;
  color: #191919;
}

.emotion-24:hover {
  border: 4px solid #6088FE;
}

.emotion-25 {
  margin: auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-44 {
  width: 0;
  height: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(0,39,107);
  border: 4px solid transparent;
  color: #ffffff;
}

.emotion-44:hover {
  border: 4px solid #6088FE;
}

.emotion-59 {
  width: 0;
  height: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(53,171,255);
  border: 4px solid transparent;
  color: #191919;
}

.emotion-59:hover {
  border: 4px solid #6088FE;
}

.emotion-82 {
  width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-weight: 700;
  border-right: 1px solid #191919;
  border-bottom: 1px solid transparent;
}

.emotion-116 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  z-index: 10;
}

.emotion-117 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  opacity: 1;
  position: relative;
  border: 2px solid #808080;
  padding: 0;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
}

.emotion-118 {
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: none;
  border-bottom: none;
}

.emotion-120 {
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
  border-right: none;
  border-bottom: none;
}

.emotion-121 {
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
  border-right: none;
  border-bottom: none;
}

.emotion-127 {
  position: absolute;
  border-style: solid;
  border-width: 2px;
  border-color: #c92300;
  top: 0;
  left: 0;
  width: -Infinity%;
  height: 100%;
}

.emotion-128 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #4a4a4a;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-129 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  color: #3A5DFF;
  padding: 8px;
  opacity: 1;
}

.emotion-129:hover {
  color: #3A5DFF;
}

.emotion-129[aria-disabled=true] {
  color: #808080;
}

.emotion-130 {
  background-color: #808080;
  width: 1px;
  margin: 8px;
}

.emotion-131 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-131:hover {
  color: #3A5DFF;
}

.emotion-131[aria-disabled=true] {
  color: #808080;
}

.emotion-132 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-132:hover {
  color: #3A5DFF;
}

.emotion-132[aria-disabled=true] {
  color: #808080;
}

.emotion-133 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #191919;
  width: 100%;
}

.emotion-134 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  border-right: 1px solid transparent;
}

.emotion-135 {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  line-height: 20px;
}

.emotion-136 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 0;
}

.emotion-137 {
  padding-left: 16px;
  width: 100px;
  min-width: 100px;
  border-right: 1px solid #191919;
}

.emotion-138 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 0%;
}

.emotion-139 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-140 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  border-bottom: 1px solid #191919;
}

.emotion-141 {
  position: relative;
  cursor: default;
}

.emotion-142 {
  min-width: 8px;
  width: 0;
  max-width: 0;
  padding: 0;
  padding-top: 16px;
  padding-bottom: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-right: 1px solid #191919;
}

.emotion-147 {
  padding: 16px;
  text-align: center;
  font-weight: 700;
  font-size: 17px;
  line-height: 20px;
}

.emotion-148 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-left: 1px solid #191919;
}

.emotion-149 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #191919;
}

.emotion-149:hover,
.emotion-149.focus-visible:focus,
.emotion-149 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-149:hover svg,
.emotion-149.focus-visible:focus svg,
.emotion-149 .noop svg {
  opacity: 1;
}

.emotion-149[aria-disabled=true],
.emotion-149 .noop {
  color: #808080;
}

.emotion-149:hover {
  background-color: #2e2e2e;
}

<div
  className="emotion-0"
>
  
  <div
    className="emotion-1"
  >
    
    <div
      className="emotion-2"
    >
      <div
        className="emotion-3"
      >
        <div
          className="emotion-4"
        >
          <div
            className="emotion-5"
          >
            <div
              className="emotion-6"
            >
              <span
                className="emotion-7"
              >
                True Label
              </span>
               
              <span
                className="emotion-8"
              >
                (Number in Set)
              </span>
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <div
              style={
                Object {
                  "height": 0,
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                className="emotion-10"
              >
                <div
                  className="emotion-11"
                >
                  <div
                    className="emotion-12"
                  >
                    <span
                      className="emotion-13"
                    >
                      pink
                       
                    </span>
                    <span
                      className="emotion-14"
                    >
                      (
                      2
                      )
                    </span>
                  </div>
                  <div
                    className="emotion-15"
                  >
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            2
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            pink
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            pink
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="pink / pink: 0%"
                          className="emotion-24"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            2
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            pink
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            red
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="pink / red: 0%"
                          className="emotion-24"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            2
                            /
                            2
                            (
                            100
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            pink
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            yellow
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="pink / yellow: 2%"
                          className="emotion-44"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            100%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                  </div>
                </div>
                <div
                  className="emotion-11"
                >
                  <div
                    className="emotion-12"
                  >
                    <span
                      className="emotion-13"
                    >
                      red
                       
                    </span>
                    <span
                      className="emotion-14"
                    >
                      (
                      2
                      )
                    </span>
                  </div>
                  <div
                    className="emotion-15"
                  >
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            1
                            /
                            2
                            (
                            50
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            red
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            pink
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="red / pink: 1%"
                          className="emotion-59"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            50%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            1
                            /
                            2
                            (
                            50
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            red
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            red
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="red / red: 1%"
                          className="emotion-59"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            50%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            2
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            red
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            yellow
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="red / yellow: 0%"
                          className="emotion-24"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                  </div>
                </div>
                <div
                  className="emotion-11"
                >
                  <div
                    className="emotion-82"
                  >
                    <span
                      className="emotion-13"
                    >
                      yellow
                       
                    </span>
                    <span
                      className="emotion-14"
                    >
                      (
                      0
                      )
                    </span>
                  </div>
                  <div
                    className="emotion-15"
                  >
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            0
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            yellow
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            pink
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="yellow / pink: 0%"
                          className="emotion-24"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            0
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            yellow
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            red
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="yellow / red: 0%"
                          className="emotion-24"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-16"
                        >
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            0
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label True:
                            </span>
                             
                            yellow
                          </h3>
                          <h3
                            className="emotion-17"
                          >
                            <span
                              className="emotion-18"
                            >
                              Label Pred:
                            </span>
                             
                            yellow
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-23"
                      >
                        <button
                          aria-label="yellow / yellow: 0%"
                          className="emotion-24"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-25"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                  </div>
                </div>
                <div
                  className="emotion-116"
                >
                  <div
                    className="emotion-117"
                  >
                    <div
                      className="emotion-118"
                    />
                    <div
                      className="emotion-118"
                    />
                    <div
                      className="emotion-120"
                    />
                    <div
                      className="emotion-121"
                    />
                    <div
                      className="emotion-121"
                    />
                    <div
                      className="emotion-118"
                    />
                    <div
                      className="emotion-118"
                    />
                    <div
                      className="emotion-118"
                    />
                    <div
                      className="emotion-118"
                    />
                    <div
                      className="emotion-127"
                    />
                  </div>
                  <div
                    className="emotion-128"
                  >
                    <button
                      aria-label="Mini map"
                      className="emotion-129"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="minimap.svg"
                        height={20}
                      />
                    </button>
                    <div
                      className="emotion-130"
                    />
                    <button
                      aria-disabled={true}
                      aria-label="Zoom Out"
                      className="emotion-131"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="circleMinus.svg"
                        height={20}
                      />
                    </button>
                    <button
                      aria-label="Zoom In"
                      className="emotion-132"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="circlePlus.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-133"
        >
          <div
            className="emotion-134"
          >
            <div
              className="emotion-135"
            >
               
            </div>
          </div>
          <div
            className="emotion-136"
          >
            <div
              className="emotion-137"
            >
               
            </div>
            <div
              className="emotion-138"
            >
              <div
                className="emotion-139"
              >
                <div
                  className="emotion-140"
                >
                  <div
                    aria-label="Prediction Label: pink"
                    className="emotion-141"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="emotion-142"
                    >
                      pink
                    </div>
                  </div>
                  <div
                    aria-label="Prediction Label: red"
                    className="emotion-141"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="emotion-142"
                    >
                      red
                    </div>
                  </div>
                  <div
                    aria-label="Prediction Label: yellow"
                    className="emotion-141"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="emotion-142"
                    >
                      yellow
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-147"
                >
                  Predictions
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "alignItems": "stretch",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": "100%",
          }
        }
      />
      <div
        className="emotion-148"
      >
        <button
          aria-label="Preview"
          className="emotion-149"
          onClick={[Function]}
          title="Preview"
          type="button"
        >
          <svg
            data-file-name="preview.svg"
            width={20}
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ModelMatrix /> should render properly 2`] = `
.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  margin-left: -32px;
  margin-right: -32px;
  margin-bottom: -32px;
  padding-top: 1px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4px;
  background-color: #191919;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 8px;
  color: #b3b3b3;
  font-size: 17px;
  line-height: 20px;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-3 {
  margin-right: 8px;
}

.emotion-4 {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  overflow: hidden;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  border-bottom: 1px solid #191919;
  font-size: 17px;
  line-height: 20px;
  background-color: #252525;
}

.emotion-6 {
  font-weight: 700;
  padding-right: 4px;
  white-space: nowrap;
}

.emotion-7 {
  width: 40px;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 32px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  padding: 0;
  margin: 0;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  padding-right: 16px;
  float: left;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
}

.emotion-11 {
  padding-right: 24px;
}

.emotion-12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
}

.emotion-14 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #ffffff;
}

.emotion-15 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: #3A5DFF;
}

.emotion-16 {
  padding-left: 12px;
}

.emotion-17 {
  font-weight: 400;
  color: #ffffff;
}

.emotion-18 {
  color: #b3b3b3;
}

.emotion-22 {
  padding: 0;
  -webkit-appearance: none;
  border-radius: 16px;
  width: 16px;
  height: 16px;
  border: 1px solid #808080;
}

.emotion-23 {
  position: absolute;
  width: 8px;
  height: 8px;
  opacity: 100;
  border-radius: 16px;
  background-color: none;
}

.emotion-27 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  color: #b3b3b3;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 32px;
}

.emotion-28 {
  color: #ffffff;
  font-weight: 700;
  padding-right: 16px;
}

.emotion-29 {
  padding-right: 24px;
}

.emotion-30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-31 {
  text-align: center;
  border-radius: 2px;
  background-color: #252525;
  color: #ffffff;
  padding: 4px;
  border: 1px solid #4a4a4a;
  width: 52px;
}

.emotion-31:focus {
  outline: 1px solid transparent;
  border: 1px solid #3A5DFF;
  color: #191919;
  background-color: #ffffff;
}

.emotion-31:hover {
  border: 1px solid #ffffff;
}

.emotion-34 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #252525;
  overflow: hidden;
}

.emotion-35 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 0%;
}

.emotion-36 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
}

.emotion-37 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  border-right: 1px solid #191919;
}

.emotion-38 {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-39 {
  font-weight: 700;
  font-size: 17px;
  line-height: 20px;
}

.emotion-40 {
  color: #b3b3b3;
}

.emotion-41 {
  width: 100%;
}

.emotion-42 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 800px;
  height: 600px;
  overflow: hidden;
}

.emotion-43 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 400px;
}

.emotion-44 {
  width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-weight: 700;
  border-right: 1px solid #191919;
  border-bottom: 1px solid #191919;
}

.emotion-45 {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-46 {
  color: #b3b3b3;
  padding-left: 4px;
  font-weight: 400;
}

.emotion-47 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.emotion-48 {
  color: #191919;
  background-color: #ffffff;
  border-radius: 2px;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  padding: 12px;
}

.emotion-49 {
  padding-bottom: 4px;
}

.emotion-50 {
  font-family: Roboto Condensed;
  font-weight: 400;
  color: #4a4a4a;
}

.emotion-55 {
  display: inline;
}

.emotion-56 {
  width: 400px;
  height: 400px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(255,255,255);
  border: 4px solid #3A5DFF;
  color: #191919;
}

.emotion-56:hover {
  border: 4px solid #6088FE;
}

.emotion-57 {
  margin: auto;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.emotion-66 {
  width: 400px;
  height: 400px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(255,255,255);
  border: 4px solid transparent;
  color: #191919;
}

.emotion-66:hover {
  border: 4px solid #6088FE;
}

.emotion-76 {
  width: 400px;
  height: 400px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(0,39,107);
  border: 4px solid transparent;
  color: #ffffff;
}

.emotion-76:hover {
  border: 4px solid #6088FE;
}

.emotion-91 {
  width: 400px;
  height: 400px;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  background-color: rgb(53,171,255);
  border: 4px solid transparent;
  color: #191919;
}

.emotion-91:hover {
  border: 4px solid #6088FE;
}

.emotion-114 {
  width: 100px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: Roboto Condensed;
  font-weight: 700;
  border-right: 1px solid #191919;
  border-bottom: 1px solid transparent;
}

.emotion-148 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  z-index: 10;
}

.emotion-149 {
  -webkit-filter: grayscale(0);
  filter: grayscale(0);
  opacity: 0;
  position: relative;
  border: 2px solid #808080;
  padding: 0;
  border-radius: 2px;
  margin-bottom: 8px;
  display: grid;
  grid-template: repeat(3, 1fr)/repeat(3, 1fr);
}

.emotion-150 {
  padding-bottom: 100%;
  background-color: rgb(255,255,255);
  border-right: none;
  border-bottom: none;
}

.emotion-152 {
  padding-bottom: 100%;
  background-color: rgb(0,39,107);
  border-right: none;
  border-bottom: none;
}

.emotion-153 {
  padding-bottom: 100%;
  background-color: rgb(53,171,255);
  border-right: none;
  border-bottom: none;
}

.emotion-159 {
  position: absolute;
  border-style: solid;
  border-width: 2px;
  border-color: #c92300;
  top: 0;
  left: 0;
  width: 58.333333333333336%;
  height: 50%;
}

.emotion-160 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border: 1px solid #4a4a4a;
  border-radius: 2px;
  background-color: #252525;
  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
  opacity: 0.8;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-161 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  color: #ffffff;
  padding: 8px;
  opacity: 1;
}

.emotion-161:hover {
  color: #3A5DFF;
}

.emotion-161[aria-disabled=true] {
  color: #808080;
}

.emotion-162 {
  background-color: #808080;
  width: 1px;
  margin: 8px;
}

.emotion-163 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 2px;
  padding: 0;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 8px;
  opacity: 1;
}

.emotion-163:hover {
  color: #3A5DFF;
}

.emotion-163[aria-disabled=true] {
  color: #808080;
}

.emotion-165 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #191919;
  width: 100%;
}

.emotion-166 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  border-right: 1px solid transparent;
}

.emotion-167 {
  -webkit-writing-mode: vertical-lr;
  -ms-writing-mode: tb;
  writing-mode: vertical-lr;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
  line-height: 20px;
}

.emotion-168 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 800px;
}

.emotion-169 {
  padding-left: 16px;
  width: 100px;
  min-width: 100px;
  border-right: 1px solid #191919;
}

.emotion-170 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: 0%;
}

.emotion-171 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-172 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  border-bottom: 1px solid #191919;
}

.emotion-173 {
  position: relative;
  cursor: default;
}

.emotion-174 {
  min-width: 8px;
  width: 400px;
  max-width: 400px;
  padding: 16px;
  padding-top: 16px;
  padding-bottom: 16px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  border-right: 1px solid #191919;
}

.emotion-179 {
  padding: 16px;
  text-align: center;
  font-weight: 700;
  font-size: 17px;
  line-height: 20px;
}

.emotion-180 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  z-index: 10;
  cursor: col-resize;
  width: 4px;
  margin-left: -2px;
  margin-right: -2px;
}

.emotion-181 {
  width: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-182 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-left: 1px solid #191919;
}

.emotion-183 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0;
  padding: 8px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #6088FE;
  background-color: transparent;
  padding-top: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid #191919;
}

.emotion-183:hover,
.emotion-183.focus-visible:focus,
.emotion-183 .noop {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.emotion-183:hover svg,
.emotion-183.focus-visible:focus svg,
.emotion-183 .noop svg {
  opacity: 1;
}

.emotion-183[aria-disabled=true],
.emotion-183 .noop {
  color: #808080;
}

.emotion-183:hover {
  background-color: #2e2e2e;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <a
      className="emotion-2"
      href="/76917058-b147-4556-987a-0a0f11e46d9b/models/621bf775-89d9-1244-9596-d6df43f1ede5"
      onClick={[Function]}
      onMouseEnter={[Function]}
    >
      <svg
        className="emotion-3"
        data-file-name="back.svg"
        height={20}
      />
      Model Details: 
      flowers
    </a>
  </div>
  <div
    className="emotion-4"
  >
    <div
      className="emotion-5"
    >
      <span
        className="emotion-6"
      >
        Accuracy:
      </span>
      <div
        className="emotion-7"
      >
        60%
      </div>
      <form
        className="emotion-8"
        method="post"
        onSubmit={[Function]}
      >
        <fieldset
          className="emotion-9"
        >
          <legend
            className="emotion-10"
          >
            View:
          </legend>
          <div
            className="emotion-11"
          >
            <div>
              <label
                className="emotion-12"
              >
                <div
                  className="emotion-13"
                >
                  <input
                    className="emotion-14"
                    defaultChecked={true}
                    name="View"
                    onClick={[Function]}
                    type="radio"
                    value="normalized"
                  />
                  <div
                    className="emotion-15"
                  />
                </div>
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-17"
                  >
                    Normalized
                  </div>
                  <div
                    className="emotion-18"
                  >
                    
                  </div>
                </div>
              </label>
            </div>
          </div>
          <div
            className="emotion-11"
          >
            <div>
              <label
                className="emotion-12"
              >
                <div
                  className="emotion-13"
                >
                  <input
                    className="emotion-22"
                    defaultChecked={false}
                    name="View"
                    onClick={[Function]}
                    type="radio"
                    value="absolute"
                  />
                  <div
                    className="emotion-23"
                  />
                </div>
                <div
                  className="emotion-16"
                >
                  <div
                    className="emotion-17"
                  >
                    Absolute
                  </div>
                  <div
                    className="emotion-18"
                  >
                    
                  </div>
                </div>
              </label>
            </div>
          </div>
        </fieldset>
        <div
          className="emotion-27"
        >
          <span
            className="emotion-28"
          >
            Confidence:
          </span>
          <div
            className="emotion-29"
          >
            <label
              className="emotion-30"
            >
              MIN
                
              <input
                className="emotion-31"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                type="text"
                value={0}
              />
            </label>
          </div>
          <label
            className="emotion-30"
          >
            MAX
              
            <input
              className="emotion-31"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyPress={[Function]}
              type="text"
              value={1}
            />
          </label>
        </div>
      </form>
    </div>
    <div
      className="emotion-34"
    >
      <div
        className="emotion-35"
      >
        <div
          className="emotion-36"
        >
          <div
            className="emotion-37"
          >
            <div
              className="emotion-38"
            >
              <span
                className="emotion-39"
              >
                True Label
              </span>
               
              <span
                className="emotion-40"
              >
                (Number in Set)
              </span>
            </div>
          </div>
          <div
            className="emotion-41"
          >
            <div
              style={
                Object {
                  "height": 0,
                  "overflow": "visible",
                  "width": 0,
                }
              }
            >
              <div
                className="emotion-42"
              >
                <div
                  className="emotion-43"
                >
                  <div
                    className="emotion-44"
                  >
                    <span
                      className="emotion-45"
                    >
                      pink
                       
                    </span>
                    <span
                      className="emotion-46"
                    >
                      (
                      2
                      )
                    </span>
                  </div>
                  <div
                    className="emotion-47"
                  >
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            2
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            pink
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            pink
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="pink / pink: 0%"
                          className="emotion-56"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            2
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            pink
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            red
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="pink / red: 0%"
                          className="emotion-66"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            2
                            /
                            2
                            (
                            100
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            pink
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            yellow
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="pink / yellow: 2%"
                          className="emotion-76"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            100%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                  </div>
                </div>
                <div
                  className="emotion-43"
                >
                  <div
                    className="emotion-44"
                  >
                    <span
                      className="emotion-45"
                    >
                      red
                       
                    </span>
                    <span
                      className="emotion-46"
                    >
                      (
                      2
                      )
                    </span>
                  </div>
                  <div
                    className="emotion-47"
                  >
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            1
                            /
                            2
                            (
                            50
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            red
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            pink
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="red / pink: 1%"
                          className="emotion-91"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            50%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            1
                            /
                            2
                            (
                            50
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            red
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            red
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="red / red: 1%"
                          className="emotion-91"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            50%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            2
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            red
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            yellow
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="red / yellow: 0%"
                          className="emotion-66"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                  </div>
                </div>
                <div
                  className="emotion-43"
                >
                  <div
                    className="emotion-114"
                  >
                    <span
                      className="emotion-45"
                    >
                      yellow
                       
                    </span>
                    <span
                      className="emotion-46"
                    >
                      (
                      0
                      )
                    </span>
                  </div>
                  <div
                    className="emotion-47"
                  >
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            0
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            yellow
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            pink
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="yellow / pink: 0%"
                          className="emotion-66"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            0
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            yellow
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            red
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="yellow / red: 0%"
                          className="emotion-66"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                    <Tippy>
                      <Tooltip>
                        <div
                          className="emotion-48"
                        >
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Predictions:
                            </span>
                             
                            0
                            /
                            0
                            (
                            0
                            %)
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label True:
                            </span>
                             
                            yellow
                          </h3>
                          <h3
                            className="emotion-49"
                          >
                            <span
                              className="emotion-50"
                            >
                              Label Pred:
                            </span>
                             
                            yellow
                          </h3>
                        </div>
                      </Tooltip>
                      <div
                        className="emotion-55"
                      >
                        <button
                          aria-label="yellow / yellow: 0%"
                          className="emotion-66"
                          onClick={[Function]}
                          type="button"
                        >
                          <div
                            className="emotion-57"
                          >
                            0%
                          </div>
                        </button>
                      </div>
                    </Tippy>
                  </div>
                </div>
                <div
                  className="emotion-148"
                >
                  <div
                    className="emotion-149"
                  >
                    <div
                      className="emotion-150"
                    />
                    <div
                      className="emotion-150"
                    />
                    <div
                      className="emotion-152"
                    />
                    <div
                      className="emotion-153"
                    />
                    <div
                      className="emotion-153"
                    />
                    <div
                      className="emotion-150"
                    />
                    <div
                      className="emotion-150"
                    />
                    <div
                      className="emotion-150"
                    />
                    <div
                      className="emotion-150"
                    />
                    <div
                      className="emotion-159"
                    />
                  </div>
                  <div
                    className="emotion-160"
                  >
                    <button
                      aria-label="Mini map"
                      className="emotion-161"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="minimap.svg"
                        height={20}
                      />
                    </button>
                    <div
                      className="emotion-162"
                    />
                    <button
                      aria-label="Zoom Out"
                      className="emotion-163"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="circleMinus.svg"
                        height={20}
                      />
                    </button>
                    <button
                      aria-label="Zoom In"
                      className="emotion-163"
                      onClick={[Function]}
                      type="button"
                    >
                      <svg
                        data-file-name="circlePlus.svg"
                        height={20}
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="emotion-165"
        >
          <div
            className="emotion-166"
          >
            <div
              className="emotion-167"
            >
               
            </div>
          </div>
          <div
            className="emotion-168"
          >
            <div
              className="emotion-169"
            >
               
            </div>
            <div
              className="emotion-170"
            >
              <div
                className="emotion-171"
              >
                <div
                  className="emotion-172"
                >
                  <div
                    aria-label="Prediction Label: pink"
                    className="emotion-173"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="emotion-174"
                    >
                      pink
                    </div>
                  </div>
                  <div
                    aria-label="Prediction Label: red"
                    className="emotion-173"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="emotion-174"
                    >
                      red
                    </div>
                  </div>
                  <div
                    aria-label="Prediction Label: yellow"
                    className="emotion-173"
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <div
                      className="emotion-174"
                    >
                      yellow
                    </div>
                  </div>
                </div>
                <div
                  className="emotion-179"
                >
                  Predictions
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "alignItems": "stretch",
            "display": "flex",
            "flexDirection": "row",
            "flexWrap": "nowrap",
            "height": "100%",
          }
        }
      >
        <div
          aria-label="Resize horizontally"
          className="emotion-180"
          onMouseDown={[Function]}
        />
        <div
          className="emotion-181"
        >
          <ModelMatrixPreview
            datasetId="4b0b10a8-cec1-155c-b12f-ee2bc8787e06"
            labels={
              Array [
                "pink",
                "red",
                "yellow",
              ]
            }
            moduleName="flower-types"
            settings={
              Object {
                "height": 600,
                "isMinimapOpen": false,
                "isNormalized": true,
                "isPreviewOpen": false,
                "labelsWidth": 100,
                "maxScore": 1,
                "minScore": 0,
                "selectedCell": Array [
                  0,
                  0,
                ],
                "width": 800,
                "zoom": 2,
              }
            }
          />
        </div>
      </div>
      <div
        className="emotion-182"
      >
        <button
          aria-label="Preview"
          className="emotion-183"
          onClick={[Function]}
          title="Preview"
          type="button"
        >
          <svg
            data-file-name="preview.svg"
            width={20}
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
